--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>dequan-shop</module>
         <module>dequan-prod</module>
         <module>dequan-gateway</module>
+        <module>dequan-oauth</module>
     </modules>
 
     <!--版本管理-->
@@ -33,6 +34,7 @@
         <java.version>1.8</java.version>
         <project.version>1.0.0-SNAPSHOT</project.version>
         <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
+        <spring-security.version>5.1.2.RELEASE</spring-security.version>
         <hystrix.version>1.4.6.RELEASE</hystrix.version>
         <druid.version>1.1.10</druid.version>
         <redis.version>2.1.4.RELEASE</redis.version>
@@ -184,6 +186,18 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+                <version>${spring-security.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-oauth2-client</artifactId>
+                <version>${spring-security.version}</version>
             </dependency>
 
         </dependencies>
